--- a/stylesheets/expected.scss
+++ b/stylesheets/expected.scss
@@ -1,20 +1,20 @@
 @mixin sprite-foo-a100x100() {
-  height: 100;
-  width: 100;
+  height: 100px;
+  width: 100px;
   background-image: url('foo.png');
-  background-position: 0 50;
+  background-position: 0px -50px;
 }
 
 @mixin sprite-foo-a200x200() {
-  height: 200;
-  width: 200;
+  height: 200px;
+  width: 200px;
   background-image: url('foo.png');
-  background-position: 100 0;
+  background-position: -100px 0px;
 }
 
 @mixin sprite-bar-a300x300() {
-  height: 300;
-  width: 300;
+  height: 300px;
+  width: 300px;
   background-image: url('bar.png');
-  background-position: 0 0;
+  background-position: 0px 0px;
 }
